cleanup, simple docs
