# api/src/routes/humans.js
@@ -1,7 +1,6 @@
 const express = require("express");
 const client = require('../config/psqlClient');
 const router = express.Router({mergeParams: true});
-const conditionBuilder = require('../utils/conditionBuilder')
 
 const rowQuery = `SELECT table_name, count(*) AS column_count
     FROM information_schema."columns"
@@ -11,28 +10,22 @@ const rowQuery = `SELECT table_name, count(*) AS column_count
 
 router.get('/', async (req, res) => {
     const humans = await client.query("SELECT qid, label FROM humans");
+    if ( humans.rowCount == 0 ) return res.status(404).send("Not found")
     return res.send(humans.rows);
 })
 
 router.get('/byqid/:qid', async (req, res) => {
     const qid = req.params.qid
     const person = await client.query(`SELECT label FROM humans WHERE qid = '${qid}'`)
+    if ( person.rowCount == 0 ) return res.status(404).send("Not found")
     return res.send(person.rows[0])
 })
 
 router.get('/bylabel/:label', async (req, res) => {
     const label = req.params.label
     const humans = await client.query(`SELECT qid, label FROM humans WHERE LOWER(label) = '${label}'`)
+    if ( humans.rowCount == 0 ) return res.status(404).send("Not found")
     res.send(humans.rows)
-})
-
-router.post('/new', async (req, res) => {
-    const custom = await client.query("SELECT qid FROM humans WHERE qid LIKE 'C%'")
-    const nums = custom.rows.map((value, ind) => parseInt(value.qid.slice(1))).sort((a, b) => a - b)
-    const props = Object.keys(req.body).join(", ")
-    const values = Object.values(req.body).join(", ")
-    const insert = await client.query(`INSERT INTO humans (qid, label, ${props}) VALUES (${nums.at(-1) + 1}, ${values})`)
-    return res.send(insert)
 })
 
 router.get('/img/:qid', async (req, res) => {
@@ -43,30 +36,13 @@ router.get('/img/:qid', async (req, res) => {
 
         })
     const imgJson = await imgRequest.json()
-    console.log(imgJson)
     try {
         const imgPath = imgJson["claims"]["P18"][0]["mainsnak"]["datavalue"]["value"].replaceAll(" ", "_")
         return res.send(imgPath)
     } catch(err) {
-        return "Not found"
+        return res.status(404).send("Not found")
     }
 })
 
-router.post('/filter', async (req, res) => {
-
-    const cond = conditionBuilder(req.body)
-
-    console.log("Cond:" + cond.conditional)
-
-    if (cond.msg !== "") {
-        res.send({
-            error: cond.msg
-        })
-    }
-    else {
-        const filter = await client.query(`SELECT qid, label FROM humans WHERE ${cond.conditional}`)
-        res.send(filter.rows)
-    }
-})
 
 module.exports = router;
